--- a/package.json
+++ b/package.json
@@ -24,5 +24,9 @@
     "express": "^4.17.1",
     "express-handlebars": "^3.1.0",
     "sequelize": "^5.21.5"
+  },
+  "devDependencies": {
+    "eslint": "^6.8.0",
+    "eslint-plugin-react": "^7.18.3"
   }
 }
