--- a/config/config.json
+++ b/config/config.json
@@ -1,8 +1,8 @@
 {
   "development": {
-    "username": "root",
-    "password": null,
-    "database": "database_development",
+    "username": "testuser",
+    "password": "test@100",
+    "database": "roundtable_db",
     "host": "127.0.0.1",
     "dialect": "mysql",
     "operatorsAliases": false
