--- a/config/config.json
+++ b/config/config.json
@@ -16,11 +16,7 @@
     "operatorsAliases": false
   },
   "production": {
-    "username": "root",
-    "password": null,
-    "database": "database_production",
-    "host": "127.0.0.1",
-    "dialect": "mysql",
-    "operatorsAliases": false
+    "url": {"ENV": "JAWSDB_URL"},
+    "dialect": "mysql"
   }
 }
